[gd_scene load_steps=6 format=3 uid="uid://d0j15bs28gt3i"]

[ext_resource type="Script" uid="uid://dyqg0wyksaa8o" path="res://ui/tabs/tab_scene/tab_scene.gd" id="1_yqq7h"]
[ext_resource type="PackedScene" uid="uid://cfyusau8c7lt0" path="res://assets/map/map.tscn" id="2_mj6vq"]
[ext_resource type="PackedScene" uid="uid://bo1ljdqhepyut" path="res://ui/tabs/tab_scene/crt.tscn" id="3_1vfoo"]
[ext_resource type="PackedScene" uid="uid://pojmf4m23i0" path="res://addons/fade_transition/fade_transition.tscn" id="3_xb7ce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ooqw2"]
bg_color = Color(0, 0, 0, 1)

[node name="TabScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqq7h")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ooqw2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
scaling_3d_mode = 1
scaling_3d_scale = 0.5
fsr_sharpness = 2.0
vrs_update_mode = 2
canvas_item_default_texture_filter = 0
positional_shadow_atlas_size = 8192
positional_shadow_atlas_16_bits = false
positional_shadow_atlas_quad_0 = 3
positional_shadow_atlas_quad_1 = 3
size = Vector2i(1280, 720)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Map" parent="SubViewportContainer/SubViewport" node_paths=PackedStringArray("tab_scene") instance=ExtResource("2_mj6vq")]
unique_name_in_owner = true
tab_scene = NodePath("../../..")

[node name="CRT" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_1vfoo")]
unique_name_in_owner = true

[node name="FadeTransition" parent="." instance=ExtResource("3_xb7ce")]
unique_name_in_owner = true
visible = true
layout_mode = 1
default_cover_duration = 0.0
default_uncover_duration = 0.5

[node name="CursorControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
